--- a/mobile/src/main/res/layout/list_item_photo.xml
+++ b/mobile/src/main/res/layout/list_item_photo.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-         >
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_gravity="center">
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/imgPhoto2"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="180dp" />
 
         <com.shahrukhbaloch.searchaway.ui.views.SquareImageView
             android:id="@+id/imgPhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
