--- a/mobile/src/main/res/layout/dialog_enlarged_photo.xml
+++ b/mobile/src/main/res/layout/dialog_enlarged_photo.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
+    android:gravity="center">
 
     <com.shahrukhbaloch.searchaway.ui.views.DraweeTouchImageView
         android:id="@+id/imgPhotoBig"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</LinearLayout>
+</FrameLayout>
