--- a/mobile/src/main/res/layout/dialog_enlarged_photo.xml
+++ b/mobile/src/main/res/layout/dialog_enlarged_photo.xml
@@ -9,4 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Download"
+        android:id="@+id/button_download"
+        android:layout_gravity="center_horizontal|bottom" />
+
 </FrameLayout>
